Overflow Y bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@ html {
 html, html a {
     -webkit-font-smoothing: antialiased;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
-    overflow-y: hidden;
 }
 
 .jp-title {
